--- a/html/index.html
+++ b/html/index.html
@@ -3,42 +3,129 @@
 
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>AVALON DB</title>
 
+<!-- BOOTSTRAP CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<link rel="stylesheet" href="/static/style/sticky-footer-navbar.css" />
+
+<!-- Custom CSS -->
 <link rel="stylesheet" href="/static/style/main.css" />
+
 </head>
 
 <body>
 
-<p>
-<h2>AVALON 보드게임 검색 :D</h2>
-</p>
 
-<p>
-게임 이름: <input type="text" id="txt_search_by_name" />&nbsp;<button id="btn_search_by_name">검색</button><br>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">AVALON</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+<!--            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+-->
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+<!-- Body -->
+<div class="container">
+
+<h2>보드게임 검색 :D</h2>
 <br>
-게임 장르: 
-<select id="opt_search_by_genre">
+
+<label>게임 번호</label>
+<div class="input-group">
+<!--  <div class="input-group-addon">게임 번호</div>-->
+  <input type="text" id="txt_search_by_id" class="txt_search form-control" placeholder="ex) A0000" />
+  <span class="input-group-btn"> 
+    <button id="btn_search_by_id" class="btn_search btn btn-default">검색</button>
+  </span>
+</div>
+<!--<button id="btn_search_by_id" class="btn btn-default btn-sm">검색</button><br>-->
+<br>
+
+<label>게임 이름</label>
+<div class="input-group">
+<!--  <div class="input-group-addon">게임 이름</div>-->
+  <input type="text" id="txt_search_by_name" class="txt_search form-control" placeholder="ex) 아콜" />
+  <span class="input-group-btn">
+    <div id="btn_search_by_name" class="btn_search btn btn-default">검색</div>
+  </span>
+</div>
+<!--<button id="btn_search_by_name" class="btn_search btn btn-default btn-sm">검색</button><br>-->
+<br>
+
+<!--
+<select id="opt_search_by_genre" class="form-control">
   <option value='none' style='display:none;'></option>
   <option value='all'>All</option>
 </select>
-</p>
+-->
 
-<p>
-<table id="list_boardgame" cellpadding="4" cellspacing="0">
+<div class="dropdown">
+  <label>장르</label><br>
+  <button id="btn_search_by_genre" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    <span class="txt">Select Genre</span>&nbsp;
+    <span class="caret"></span>
+  </button>
+  <ul id="opt_search_by_genre" class="opt_search dropdown-menu" aria-labelledby="dropdownMenu1">
+    <li value="all" onclick="searchByGenre('all')"><a>All</a></li>
+  </ul>
+</div><br>
+<br>
+
+<table id="list_boardgame" class="table table-striped table-hoverB table-condensed table-responsive" cellpadding="4" cellspacing="0">
   <thead>
     <tr></tr>
   </thead>
 
   <tbody>
+
   </tbody>
 </table>
-</p>
+
+</div>
 
 
+
+<footer class="footer">
+  <div class="container">
+    <p class="text-muted">AVALON of UOS</p>
+  </div>
+</footer>
 
 <script type='text/javascript' src="/socket.io/socket.io.js"></script>
 <script type='text/javascript' src="//code.jquery.com/jquery-latest.min.js"></script>
+
+<!-- BOOTSTRAP Javascript --> 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 <script type='text/javascript' src="/static/script/avGenre.js"></script>
 <script type='text/javascript' src="/static/script/avList.js"></script>
@@ -56,19 +143,36 @@ var reqGames = function (data) {
   socket.emit('req_gamesearch', data);
 }
 
+$("#txt_search_by_id").keyup(function(event) {
+  if (event.which == 13) {
+    reqGames({id:$('#txt_search_by_id').val().trim()});
+  }
+});
+$("#btn_search_by_id").click(function() {
+  reqGames({id:$('#txt_search_by_id').val().trim()});
+});
 $("#txt_search_by_name").keyup(function(event) {
   if (event.which == 13) {
-    reqGames({word:$('#txt_search_by_name').val()});
+    reqGames({word:$('#txt_search_by_name').val().trim()});
   }
 });
 $("#btn_search_by_name").click(function() {
-  reqGames({word:$('#txt_search_by_name').val()});
+  reqGames({word:$('#txt_search_by_name').val().trim()});
 });
+/*
 $('#opt_search_by_genre').change(function() {
   reqGames({
     genre: $("#opt_search_by_genre option:selected").val()
   });
 })
+*/
+var searchByGenre = function (gen) {
+  reqGames({
+    genre: gen
+  });
+
+  $('#btn_search_by_genre>.txt').html(avGenre[gen]);
+}
 
 // Receive Response
 socket.on('res_gamesearch', function (rows) { 
