Designed with Bootstrap 2nd

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
 <!-- BOOTSTRAP CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+<link href='https://fonts.googleapis.com/css?family=Raleway:400,700,900' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/static/style/sticky-footer-navbar.css" />
 
 <!-- Custom CSS -->
@@ -20,7 +21,7 @@
 
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav id="nav_top" class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -29,13 +30,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">AVALON</a>
+          <a class="navbar-brand" href="/">UOS AVALON</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-<!--            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="#nvSearch">검색</a></li>
+            <li><a href="#nvSubmit">등록</a></li>
+<!--            <li><a href="#contact">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -57,8 +58,13 @@
 <!-- Body -->
 <div class="container">
 
-<h2>보드게임 검색 :D</h2>
+<!--<h2>보드게임 검색 :D</-->
 <br>
+<h1 class="h_title">AVALON</h1>
+<h2 class="h_title">Boardgame Searcher</h2>
+<br>
+<br>
+
 
 <label>게임 번호</label>
 <div class="input-group">
@@ -117,7 +123,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p class="text-muted">AVALON of UOS</p>
+    <p class="text-muted">© AVALON of UOS</p>
   </div>
 </footer>
 
@@ -181,6 +187,11 @@ socket.on('res_gamesearch', function (rows) {
   for (var i=0; i<rows.length; i++) {
     avList.addItem(rows[i]);
   }
+
+  $(function () {
+    $('[data-toggle="popover"]').popover()
+  })
+
 });
 
 </script>
