--- a/html/register.html
+++ b/html/register.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 
 <head>
@@ -309,7 +309,9 @@ $('#txt_game_memo').keydown(function(event) {
     reqRegister();
   }
 });
-$('#btn_register').click(regRegister);
+$('#btn_register').click(function(){
+  reqRegister();
+});
 
 socket.on('res_gameregister', function (res) {
   if (res.registered == true)
