--- a/html/register.html
+++ b/html/register.html
@@ -59,7 +59,7 @@
 
 <br>
 <!--<h1 class="h_title">AVALON</h1>-->
-<h2 class="h_title">Register Games</h2>
+<h2 class="h_title" style="margin-top: 30px;"><!--Register Games-->게임 등록</h2>
 <br>
 <br>
 
@@ -79,20 +79,20 @@
 </div>
 <br>
 
-<button id="btn_login" class="btn_search btn btn-primary btn-block">LOGIN</button><br>
+<button id="btn_login" class="btn_search btn btn-primary btn-block">로그인</button><br>
 
 </div> <!-- jumbotron -->
 
 
 
 <div id="box_register" class="jumbotron" style="display: none;">
-<h2>게임 등록</h2>
+<h2>등록하기</h2>
 <br>
 
 <div class="dropdown">
   <label>* 장르</label><br>
   <button id="btn_genre" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    <span class="txt">Select Genre</span>&nbsp;
+    <span class="txt">= 선택 =</span>&nbsp;
     <span class="caret"></span>
   </button>
   <ul id="opt_genre" class="opt_search dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -174,6 +174,7 @@
 <!-- BOOTSTRAP Javascript --> 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
+<script type='text/javascript' src="/static/script/common.js"></script>
 <script type='text/javascript' src="/static/script/avGenre.js"></script>
 <script type='text/javascript' src="/static/script/avGenreRegister.js"></script>
 <script type='text/javascript' src="/static/script/avList.js"></script>
