--- a/html/register.html
+++ b/html/register.html
@@ -20,7 +20,7 @@
 
     <!-- Fixed navbar -->
     <nav id="nav_top" class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+      <div class="container" id="fixed_navbar">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
